fixed layout issue

--- a/src/web/src/components/App.css
+++ b/src/web/src/components/App.css
@@ -76,8 +76,3 @@ h1 {
     color: white !important;
 }
 
-@media only screen and (max-width: 992px) {
-    body{
-        overflow-y: hidden;
-    }
-}
